# findlargedir

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
benches/: walk.rs
ci/: cargo-out-dir
src/: args.rs  calibrate.rs  interrupt.rs  main.rs  progress.rs  walk.rs
src/walk/: engine.rs  fallback.rs  unix.rs
