[package]
name = "findlargedir"
version = "0.9.2"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "find all blackhole directories with a huge amount of filesystem entries in a flat structure"
repository = "https://github.com/dkorunic/findlargedir"
homepage = "https://github.com/dkorunic/findlargedir"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2024"
rust-version = "1.85"

[dependencies]
rayon = "1.10.0"
tempfile = "3.20.0"
anyhow = "1.0.98"
human_format = "1.1.0"
clap = { version = "4.5.40", features = ["derive", "unicode", "wrap_help"] }
rm_rf = "0.6.2"
ansi_term = "0.12.1"
fs-err = "3.1.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
cfg-if = "1.0"
fdlimit = "0.3.0"
ahash = "0.8.12"
anstyle = "1.0.11"
signal-hook = "0.3.18"
ignore = "0.4.23"
normpath = "1.3.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.6.0"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
tikv-jemallocator = "0.6.0"

[target.'cfg(target_os = "macos")'.dependencies]
tikv-jemallocator = "0.6.0"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
