[package]
name = "findlargedir"
version = "0.10.0"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "find all blackhole directories with a huge amount of filesystem entries in a flat structure"
repository = "https://github.com/dkorunic/findlargedir"
homepage = "https://github.com/dkorunic/findlargedir"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2024"
rust-version = "1.88"

[dependencies]
mimalloc = "0.1.48"
rayon = "1.11.0"
tempfile = "3.21.0"
anyhow = "1.0.99"
human_format = "1.1.0"
clap = { version = "4.5.47", features = ["derive", "unicode", "wrap_help"] }
rm_rf = "0.6.2"
ansi_term = "0.12.1"
fs-err = "3.1.1"
indicatif = { version = "0.18.0", features = ["rayon"] }
fdlimit = "0.3.0"
ahash = "0.8.12"
anstyle = "1.0.11"
signal-hook = "0.3.18"
ignore = "0.4.23"
normpath = "1.3.0"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
