[package]
name = "findlargedir"
version = "0.12.0"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "find all blackhole directories with a huge amount of filesystem entries in a flat structure"
repository = "https://github.com/dkorunic/findlargedir"
homepage = "https://github.com/dkorunic/findlargedir"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2024"
rust-version = "1.88.0"

[dependencies]
mimalloc = "0.1.52"
tempfile = "3.27.0"
anyhow = "1.0.102"
human_format = "1.2.1"
clap = { version = "4.6.1", features = ["derive", "unicode", "wrap_help"] }
ansi_term = "0.12.1"
fs-err = "3.3.0"
indicatif = { version = "0.18.4", features = ["rayon"] }
fdlimit = "0.3.0"
ahash = "0.8.12"
anstyle = "1.0.14"
signal-hook = "0.4.4"
normpath = "1.5.1"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
] }

[[bench]]
name = "walk"
harness = false

[lints.rust]
future-incompatible = { level = "warn", priority = -2 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
pedantic = { level = "warn", priority = 3 }

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
